--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,3 +1,35 @@
 body {
   background: peachpuff;
 }
+
+div {
+  background-color: burlywood;
+  border: 2px solid rgb(138, 108, 62);
+}
+
+.a {
+  width: 100%;
+height: 150px;
+}
+
+.b {
+  width: 100%;
+  height: 300px;
+}
+
+.c {
+
+}
+
+.d {
+
+}
+
+.e {
+
+}
+
+.f {
+  width: 100%;
+height: 150px;
+}
